# cemp-mobile

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  ckd.txt  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md
apps/android/: README.md  babel.config.js  index.js  metro.config.js  package.json  tsconfig.json
apps/android/android/: settings.gradle
apps/android/android/app/: build.gradle
apps/android/src/: App.tsx  app-container.ts  background-sync-core.test.ts  background-sync-core.ts  background-sync.ts  messaging.test.ts  messaging.ts  navigation.ts  vault-liveness.test.ts  vault-liveness.ts
apps/android/src/platform/: android-keystore.ts  android-notifier.ts  best-effort.test.ts  best-effort.ts  headless-task-id.test.ts  headless-task-id.ts  headless-task.ts  hex.test.ts  hex.ts  kdf.ts  keychain-blob.test.ts  keychain-blob.ts  locked-probe.test.ts  locked-probe.ts  native-kdf.ts  notification-permission.test.ts  notification-permission.ts  route-tag-cache-codec.test.ts  route-tag-cache-codec.ts  route-tag-cache-core.test.ts  route-tag-cache-core.ts  route-tag-cache.ts  scheduler-coalesce.test.ts  scheduler-coalesce.ts  sqlcipher-adapter.ts  vault-storage.ts  work-manager-scheduler.ts
apps/android/src/screens/: chat-screen.tsx  chats-screen.tsx  contact-edit-screen.tsx  contacts-screen.tsx  settings-screen.tsx  unlock-screen.tsx  (+2 more)
apps/reference-client/: FUNDING.md  README.md  package.json  recover-broken-deploy.ts  tsconfig.json
apps/reference-client/src/: chain.ts  faucet.ts  identities.ts  journal.test.ts  journal.ts  main.ts  paths.ts  reconcile-math.test.ts  reconcile-math.ts  state.test.ts  state.ts  wire.ts
contracts/: Cargo.toml  README.md  rust-toolchain.toml
contracts/cemp-message-type/: Cargo.toml  README.md  build.sh  verify-reproducible.sh
contracts/cemp-message-type/src/: lib.rs  main.rs
contracts/deployment/: README.md  cemp-message-type.testnet.json
docs/adr/: 0001-monorepo-and-toolchain.md  0002-import-cemp-pq-as-reference.md  0003-testnet-only-mldsa-v2-lock.md  0004-ccc-version-pin.md  0005-acknowledgement-responses.md
docs/architecture/: ios-prep.md  ios-rn-xtool-spike.md  overview.md
docs/grounding/: README.md  ckb-knowledge-graph-routes.md  mldsa-v2-signing-pipeline.md  reference-projects.md
docs/protocol/: CEMP-PROTOCOL-V1.md  README.md
docs/review/: INDEPENDENT-REVIEW-REPORT.md  INDEPENDENT-REVIEW-REQUEST.md
docs/superpowers/plans/: 2026-07-20-phase9-background-operation.md
docs/superpowers/specs/: 2026-07-20-phase9-background-operation-design.md
docs/threat-model/: CHECKLIST.md  README.md
reference/: README.md
reference/cemp-pq/: README.md  derive-address.js  index.d.ts  index.js  live-test.js  package-lock.json  package.json  test-builder.js  test.js  tx-builder.js  tx-builder.test.js  verify-txs.js
reference/cemp-pq/schemas/: cemp-pq.mol
tools/devnet/: README.md
tools/faucet-helper/: README.md
tools/protocol-inspector/: README.md  package.json
tools/protocol-inspector/src/: decode.test.ts  decode.ts  main.ts  payload.ts
tools/signing-harness/: Cargo.toml  README.md
tools/signing-harness/src/: ckb_tx_message_all_host.rs  lib.rs  main.rs  message.rs
(+28 files in other folders)
