[package]
name = "cemp-message-type"
description = "CEMP message type script — on-chain validation of the 81-byte discovery args (protocol v1)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[[bin]]
name = "cemp-message-type"
path = "src/main.rs"

# ckb-std only builds for the on-chain target. Host builds and `cargo test`
# never compile it, and the CKB-VM entry point in src/main.rs is gated on the
# same cfg, so the plain riscv64 build command needs no extra flags.
# Only the raw-syscall half of ckb-std is used (see the warning in main.rs):
# ckb-gen-types / bytes pull A-extension atomics that CKB-VM cannot execute.
[target.'cfg(target_arch = "riscv64")'.dependencies]
ckb-std = "=1.1.0"
